--- a/styles/css.css
+++ b/styles/css.css
@@ -27,27 +27,15 @@ border: 2px solid #ddd;
   transition-duration: 1s;
   font-size: 10px;
   width: 90%;
-  height: 6%;
+  height: 45px;
   margin-left: 12px;
   padding: 10px;
   box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
 }
 
-.rectangle{
-  transition-duration: 1s;
-  font-size: 10px;
-  width: 90%;
-  height: 50px;
-  margin-left: 12px;
-  padding: 10px;
-  font-size: 21px;
-  line-height: 230%;
-  border-bottom: 2px solid #eee;
-}
-
 #text{
 width: 70%;
-margin-top: 18px;
+margin-top: 14px;
 margin-left: 15px;
 border: 0;
 border-bottom: 2px solid #ccc;
@@ -69,6 +57,30 @@ box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
 margin-left: 10px;
 }
 
-.works_container{
+/* WORKS STYLE */
 
+.rectangle{
+  transition-duration: 1s;
+  font-size: 10px;
+  width: 90%;
+  height: 50px;
+  margin-left: 12px;
+  padding: 10px;
+  font-size: 21px;
+  border-bottom: 2px solid #eee;
+}
+
+.inner{
+  float: left;
+  width: 92%;
+  margin-top: 14px;
+
+}
+
+.remove{
+  float: left;
+  width: 15px;
+  height: 15px;
+  margin-top: 17px;
+  border: 2px solid #aaa;
 }
