--- a/styles/css.css
+++ b/styles/css.css
@@ -79,8 +79,9 @@ margin-left: 10px;
 
 .remove{
   float: left;
-  width: 15px;
-  height: 15px;
-  margin-top: 17px;
-  border: 2px solid #aaa;
+  width: 25px;
+  height: 25px;
+  margin-top: 14px;
+  font-size: 22px;
+  color: #4C49FF;
 }
