--- a/styles/css.css
+++ b/styles/css.css
@@ -37,12 +37,13 @@ border: 2px solid #ddd;
 width: 70%;
 margin-top: 14px;
 margin-left: 15px;
-border: 0;
+border: none;
 border-bottom: 2px solid #ccc;
+outline: none;
 }
 
-#text:active{
-border-bottom: 2px solid #4C49FF;
+#text:focus{
+border-bottom: 2px solid rgba(76,113,255,0.7);
 }
 
 #button{
