--- a/styles/css.css
+++ b/styles/css.css
@@ -5,38 +5,36 @@ font-family: 'Roboto', sans-serif;
 
 
 .container{
-width: 450px;
+width: 100%;
 height: 100vh;
-
-border: 2px solid #ddd;
 }
 
 .up_list{
   background-color: #4C49FF;
   width:100%;
-  height: 50px;
+  height: 40px;
 
   box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
 
   color: #fff;
-  font-size: 30px;
-  line-height: 155%;
+  font-size: 26px;
+  line-height: 150%;
 }
 
 .add_menu{
   transition-duration: 1s;
   font-size: 10px;
   width: 90%;
-  height: 45px;
-  margin-left: 12px;
+  height: 40px;
+  margin-left: 2.5%;
   padding: 10px;
   box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
 }
 
 #text{
 width: 70%;
-margin-top: 14px;
-margin-left: 15px;
+margin-top: 12px;
+margin-left: 6px;
 border: none;
 border-bottom: 2px solid #ccc;
 outline: none;
@@ -47,8 +45,8 @@ border-bottom: 2px solid rgba(76,113,255,0.7);
 }
 
 #button{
-width: 80px;
-height: 30px;
+width: 75px;
+height: 28px;
 color: #fff;
 background-color: #4C49FF;
 padding: 0;
@@ -73,7 +71,7 @@ margin-left: 10px;
 
 .inner{
   float: left;
-  width: 92%;
+  width: 90%;
   margin-top: 14px;
 
 }
