--- a/styles/css.css
+++ b/styles/css.css
@@ -1,90 +1,111 @@
-body{
-margin: 0 !important;
-font-family: 'Roboto', sans-serif;
+body {
+    margin: 0 !important;
+    font-family: 'Roboto', sans-serif;
+
+    font-size: 10px;
 }
 
 
-.container{
-width: 100%;
-height: 100vh;
+.container {
+    width: 100vw;
+    height: 100vh;
 }
 
-.up_list{
-  background-color: #4C49FF;
-  width:100%;
-  height: 40px;
+.up_list {
+    display: flex;
 
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+    width:100%;
+    height: 40px;
 
-  color: #fff;
-  font-size: 26px;
-  line-height: 150%;
+    box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+    background-color: #4C49FF;
+
+    color: #fff;
+    font-size: 26px;
 }
 
-form{
-  transition-duration: 1s;
-  font-size: 10px;
-  width: 90%;
-  height: 40px;
-  margin-left: 2.5%;
-  padding: 10px;
-  box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
+.up_list > span {
+    flex: 1;
 }
 
-#text{
-width: 70%;
-margin-top: 12px;
-margin-left: 6px;
-border: none;
-border-bottom: 2px solid #ccc;
-outline: none;
+.center {
+    justify-content: center;
+    align-items: center;
 }
 
-#text:focus{
-border-bottom: 2px solid rgba(76,113,255,0.7);
+form {
+    display: flex;
+
+    width: 90%;
+    height: 60px;
+
+    margin-left: 5%;
+
+    box-shadow: 0px 1px 5px rgba( 0, 0, 0, 0.5 );
 }
 
-#button{
-width: 75px;
-height: 28px;
-color: #fff;
-background-color: #4C49FF;
-padding: 0;
-border: 0;
-border-radius: 4px;
-box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
-margin-left: 10px;
-outline: none;
+#text {
+    flex: 1;
+
+    margin: 10px;
+
+    border: none;
+    border-bottom: 2px solid #ccc;
+
+    font-size: 15px;
+
+    outline: none;
 }
 
-#button:active{
-  background-color: #3B38EE;
+#text:focus {
+    border-bottom: 2px solid rgba( 76, 113, 255, 0.7 );
+}
+
+button {
+    width: 75px;
+    height: 28px;
+
+    color: #fff;
+    background-color: #4C49FF;
+
+    border: 0;
+    border-radius: 4px;
+    box-shadow: 0px 1px 5px rgba( 0, 0, 0, 0.5 );
+
+    margin: 10px;
+
+    outline: none;
+}
+
+#button:active {
+    background-color: #3B38EE;
 }
 
 /* WORKS STYLE */
 
-.rectangle{
-  transition-duration: 1s;
-  font-size: 10px;
-  width: 90%;
-  height: 50px;
-  margin-left: 12px;
-  padding: 10px;
-  font-size: 21px;
-  border-bottom: 2px solid #eee;
+.rectangle {
+    display: flex;
+
+    width: 90%;
+    height: 70px;
+
+    margin-left: 5%;
+
+    font-size: 21px;
+    border-bottom: 2px solid #eee;
 }
 
-.inner{
-  float: left;
-  width: 90%;
-  margin-top: 14px;
+.inner {
+    flex: 1;
+    padding: 5%;
 }
 
-.remove{
-  float: left;
-  width: 25px;
-  height: 25px;
-  margin-top: 14px;
-  font-size: 22px;
-  color: #4C49FF;
+.remove {
+    width: 25px;
+    height: 25px;
+
+    font-size: 22px;
+    color: #4C49FF;
+
+    padding: 5%;
 }
