--- a/client/styles/css.css
+++ b/client/styles/css.css
@@ -1,31 +1,25 @@
 body {
     margin: 0 !important;
-    font-family: 'Roboto';
-
+    font-family: 'Roboto', sans-serif;
     font-size: 10px;
 }
 
 
 .container {
+    display: flex;
+    flex-direction: column;
+
     width: 100vw;
     height: 100vh;
 }
 
-.up_list {
-    display: flex;
-
-    width:100%;
-    height: 40px;
-
-    box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
-    background-color: #4C49FF;
-
-    color: #fff;
-    font-size: 26px;
+.works_container {
+    overflow: scroll;
+    flex: 1;
 }
 
-.up_list > span {
-    flex: 1;
+.works_container::-webkit-scrollbar {
+    width: 0px;
 }
 
 .center {
@@ -41,13 +35,15 @@ form {
 
     margin-left: 5%;
 
-    box-shadow: 0px 1px 5px rgba( 0, 0, 0, 0.5 );
+    box-shadow: 0px 1px 3px rgba( 0, 0, 0, 0.3 );
 }
 
-#text {
+input {
     flex: 1;
 
     margin: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
 
     border: none;
     border-bottom: 2px solid #ccc;
@@ -57,8 +53,8 @@ form {
     outline: none;
 }
 
-#text:focus {
-    border-bottom: 2px solid rgba( 76, 113, 255, 0.7 );
+input:focus {
+    border-bottom: 2px solid rgba(76, 113, 255, 0.7);
 }
 
 button {
@@ -77,7 +73,7 @@ button {
     outline: none;
 }
 
-#button:active {
+button:active {
     background-color: #3B38EE;
 }
 
@@ -98,7 +94,7 @@ button {
 .inner {
     flex: 1;
     padding: 5%;
-    color: rgba(0, 0, 0, 0.7);
+    color: rgba(0, 0, 0, 0.6);
 }
 
 .remove {
