--- a/client/styles/css.css
+++ b/client/styles/css.css
@@ -4,7 +4,6 @@ body {
     font-size: 10px;
 }
 
-
 .container {
     display: flex;
     flex-direction: column;
@@ -25,6 +24,40 @@ body {
 .center {
     justify-content: center;
     align-items: center;
+}
+
+.header {
+    display: flex;
+
+    align-items: center;
+
+    width: 100%;
+    height: 28px;
+
+    background-color: #4C49FF;
+    -webkit-app-region: drag;
+}
+
+.header > a {
+    display: flex;
+
+    width: 18px;
+    height: 18px;
+
+    border-radius: 45px;
+    margin-left: 5px;
+
+    background-color: rgba(0, 0, 0, 0.3);
+
+    -webkit-app-region: no-drag;
+}
+
+.header > a:hover {
+    background-color: rgba(255, 88, 78, 0.9);
+}
+
+.header > a:last-of-type:hover {
+    background-color: rgba(126, 255, 83, 0.7);
 }
 
 form {
