--- a/client/styles/css.css
+++ b/client/styles/css.css
@@ -1,12 +1,14 @@
 body {
-    margin: 0 !important;
-    font-family: 'Roboto', sans-serif;
-    font-size: 10px;
+    margin: 0;
+
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
 }
 
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     width: 100vw;
     height: 100vh;
@@ -15,15 +17,11 @@ body {
 .works_container {
     overflow: scroll;
     flex: 1;
+
 }
 
 .works_container::-webkit-scrollbar {
     width: 0px;
-}
-
-.center {
-    justify-content: center;
-    align-items: center;
 }
 
 .header {
@@ -32,7 +30,7 @@ body {
     align-items: center;
 
     width: 100%;
-    height: 28px;
+    height: 25px;
 
     background-color: #4C49FF;
     -webkit-app-region: drag;
@@ -62,26 +60,23 @@ body {
 
 form {
     display: flex;
+    justify-content: space-around;
 
-    width: 90%;
-    height: 60px;
+    width: 80%;
+    height: 40px;
 
-    margin-left: 5%;
-
-    box-shadow: 0px 1px 3px rgba( 0, 0, 0, 0.3 );
+    padding: 10px;
+    border: 1px solid rgba(0, 0, 0, .1);
 }
 
 input {
-    flex: 1;
-
-    margin: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    flex: 3;
 
     border: none;
-    border-bottom: 2px solid #ccc;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
 
-    font-size: 15px;
+    padding: 5px;
+    margin: 5px;
 
     outline: none;
 }
@@ -90,18 +85,14 @@ input:focus {
     border-bottom: 2px solid rgba(76, 113, 255, 0.7);
 }
 
-button {
-    width: 75px;
-    height: 28px;
+input:last-of-type {
+    flex: 1;
 
     color: #fff;
     background-color: #4C49FF;
 
     border: 0;
-    border-radius: 4px;
-    box-shadow: 0px 1px 5px rgba( 0, 0, 0, 0.5 );
-
-    margin: 10px;
+    border-radius: 1px;
 
     outline: none;
 }
@@ -112,30 +103,30 @@ button:active {
 
 /* WORKS STYLE */
 
-.rectangle {
-    display: flex;
+ul {
+  flex: 1;
+  width: 80%;
 
-    width: 90%;
-    height: 70px;
+  margin: 0;
+  padding: 0;
 
-    margin-left: 5%;
-
-    font-size: 21px;
-    border-bottom: 2px solid #eee;
+  color: rgba(0, 0, 0, .6);
+  font-size: 1.1em;
 }
 
-.inner {
-    flex: 1;
-    padding: 5%;
-    color: rgba(0, 0, 0, 0.6);
+ul > li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 20px;
+  padding-left: 0;
+  padding-right: 0;
+  border-bottom: 1px solid rgba(0, 0, 0, .05);
+
+  list-style: none;
 }
 
-.remove {
-    width: 25px;
-    height: 25px;
-
-    font-size: 22px;
+ul > li > i {
     color: #4C49FF;
-
-    padding: 5%;
 }
